--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -1,8 +1,3 @@
-html {
-	scroll-behavior: smooth;
-	font-size: 62.5%;
-}
-
 * {
 	box-sizing: border-box;
   }
@@ -30,6 +25,15 @@ html {
 	--section-tagline-transform: uppercase;
 	--section-title-margin: 0;
 	--section-title-color: var(--color-black);
+}
+
+.box {
+	box-sizing: border-box;
+}
+
+html {
+	scroll-behavior: smooth;
+	font-size: 62.5%;
 }
 
 body {
