--- a/CSS_advanced/styles/15-style.css
+++ b/CSS_advanced/styles/15-style.css
@@ -23,9 +23,10 @@
 	--section-title-color: var(--color-black);
 }
 
-.box {
-	box-sizing: border-box;
-}
+*, *:before, *:after {
+    box-sizing: border-box;
+  }
+
 
 html {
 	scroll-behavior: smooth;
