--- a/CSS_advanced/styles/16-style.css
+++ b/CSS_advanced/styles/16-style.css
@@ -85,8 +85,9 @@ a:active {
 }
 
 .container {
-	width: 960;
-	margin: auto;
+	width: 960px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
