--- a/CSS_advanced/styles/17-style.css
+++ b/CSS_advanced/styles/17-style.css
@@ -269,7 +269,8 @@ a:active {
 }
 
 .section-footer {
-	padding: var(--section-footer-align);
+	padding: var(--section-footer-padding);
+	text-align: var(--section-footer-align);
 }
 
 .section-title {
