--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -216,12 +216,12 @@ template {
 	--nav-item-letter-spacing: 0.04rem;
 	--nav-item-display: inline-block;
 	--nav-item-margin: 0 0 3rem 0;
-	--nav-item-link-hover: var(--color-primary);
+    --nav-item-link-hover: var(--color-primary);
 }
 
 *, *:before, *:after {
     box-sizing: border-box;
-}
+  }
 
 html {
 	scroll-behavior: smooth;
@@ -234,35 +234,6 @@ body {
 	font-size: var(--font-size-medium);
 	font-weight: var(--font-weight-regular);
 	line-height: var(--line-height-base);
-}
-
-.navbar-menu {
-	float: right;
-}
-
-.nav {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-	text-align: center;
-}
-
-.nav .nav_item {
-	font-family: var(--nav-item-font-family);
-	font-weight: var(--nav-item-font-weight);
-	font-size: var(--nav-item-font-size);
-	letter-spacing: var(--nav-item-letter-spacing);
-	display: var(--nav-item-display);
-	margin: var(--nav-item-margin);
-}
-
-.nav .nav-link {
-	display: block;
-	padding: 0.5rem 1rem;
-}
-
-.nav .nav-link:hover {
-	color: var(--nav-item-link-hover);
 }
 
 a:link {
@@ -280,6 +251,35 @@ a:hover {
 
 a:active {
 	background-color: var(--color-light-grey);
+}
+
+.navbar-menu {
+	float: right;
+}
+
+.nav {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	text-align: center;
+}
+
+.nav .nav-item {
+	font-family: var(--nav-item-font-family);
+	font-weight: var(--nav-item-font-weight);
+	font-size: var(--nav-item-font-size);
+	letter-spacing: var(--nav-item-letter-spacing);
+	display: var(--nav-item-display);
+	margin: var(--nav-item-margin);
+}
+
+.nav .nav-link {
+	display: block;
+	padding: 0.5rem 1rem;
+}
+
+.nav .nav-link:hover {
+	color: var(--nav-item-link-hover);
 }
 
 .visually-hidden {
