--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -216,13 +216,15 @@ template {
 	--nav-item-letter-spacing: 0.04rem;
 	--nav-item-display: inline-block;
 	--nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: var(--color-primary);
+	--nav-item-link-hover: var(--color-primary);
 	--section-tagline-margin: 0;
 }
 
-*, *:before, *:after {
-    box-sizing: border-box;
-  }
+*,
+*:before,
+*:after {
+	box-sizing: border-box;
+}
 
 html {
 	scroll-behavior: smooth;
@@ -331,7 +333,12 @@ a:active {
 	margin-right: auto;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-family: var(--font-family-title);
 	font-weight: var(--font-weight-bold);
 }
