--- a/CSS_advanced/styles/20-style.css
+++ b/CSS_advanced/styles/20-style.css
@@ -179,18 +179,19 @@ ul.row {
 
 .col-1-3 {
     width: 33.33%;
-    float: left;
-    padding: 0.5rem;
 }
 
 .col-1-2 {
     width: 50%;
-    float: left;
-    padding: 0.5rem;
 }
 
 .row::after {
 	content: "";
 	display: table;
 	clear: both;
+}
+
+[class^="col-"] {
+	float: left;
+	padding: 0.5rem;
 }
