--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -199,7 +199,7 @@ ul.row {
 [data-section-theme="dark"] {
 	--text-color: var(--color-white);
 	--section-title-color: var(--color-white);
-	background : var(--color-black);
+	background-color : var(--color-black);
 }
 
 .footer-adress {
