--- a/CSS_advanced/styles/27-style.css
+++ b/CSS_advanced/styles/27-style.css
@@ -202,9 +202,7 @@ a:active {
 }
 
 .section-hero {
-	background-size: cover;
-	width: 90rem;
-	height: auto;
+	background-size: 90rem auto;
 }
 
 .section-hero .section-title {
