--- a/CSS_advanced/styles/28-style.css
+++ b/CSS_advanced/styles/28-style.css
@@ -48,11 +48,11 @@
 	--button-hover-text-decoration: none;
 	--button-hover-background: var(--color-primary);
 	--header-padding: 4rem 0 0;
-	--header-logo-position: relative;
-	--header-logo-link-display: inline-block;
-	--header-logo-link-position: absolute;
-	--header-logo-link-top: -1rem;
-	--header-logo-link-left: 0;
+    --header-logo-position: relative;
+    --header-logo-link-display: inline-block;
+    --header-logo-link-position: absolute;
+    --header-logo-link-top: -1rem;
+    --header-logo-link-left: 0;
 }
 
 *, *:before, *:after {
@@ -65,19 +65,18 @@ html {
 }
 
 .header {
-	padding: var(--header-padding);
+    padding: var(--header-padding);
 }
 
 .header-logo {
-	position: var(--header-logo-link-position);
+    position: var(--header-logo-position);
 }
 
 .header-logo a {
-	display: var(--header-logo-link-display);
-	position: var(--header-logo-link-position);
-	top: var(--header-logo-link-top);
-	left: var(--header-logo-link-left);
-	
+    display: var(--header-logo-link-display);
+    position: var(--header-logo-link-position);
+    top: var(--header-logo-link-top);
+    left: var(--header-logo-link-left);
 }
 
 body {
