--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -142,7 +142,6 @@ a:active {
 .nav .nav-link {
     display: block;
     padding: 0.5rem 1rem;
-    
 }
 
 .nav .nav-link:hover {
@@ -159,7 +158,7 @@ a:active {
 	height: 0.02rem;
 }
 
-.nav-link::before:hover {
+.nav .nav-link::before .nav-item:hover {
 	background-color: var(--color-primary);
 	width: 100%;
 }
