--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -235,13 +235,13 @@ a:active {
 	position: relative;
 }
 
-.card-title a {
+.card-work .card-title a {
 	display: block;
 	text-decoration: none;
 	padding-top: 45%;
 }
 
-.card-title a::after {
+.card-work .card-title a::after {
 	position: absolute;
 	top: 0;
 	right: 0;
