--- a/CSS_advanced/styles/30-style.css
+++ b/CSS_advanced/styles/30-style.css
@@ -208,7 +208,7 @@ a:active {
 	overflow: hidden;
 }
 
-.card-work .card-image > img {
+.card-work .card-image img {
 	height: 30rem;
 	width: 100%;
 	object-fit: cover;
