--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -276,7 +276,7 @@ a:active {
 
 .card-work:hover .card-image {
 	transform: scale(1.2);
-	transition: var(–-transition-duration) var(--transition-cubic-bezier);
+	transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-outer {
