--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -54,7 +54,7 @@
     --header-logo-link-top: -1rem;
     --header-logo-link-left: 0;
 	--transition-duration: .3s;
-	--transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
+    --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
 }
 
 *, *:before, *:after {
@@ -116,11 +116,11 @@ a:active {
 }
 
 .button:hover {
-	color: var(--button-hover-color);
-	text-decoration: var(--button-hover-text-decoration);
-	background-color: var(--button-hover-background);
-	transition: var(--transition-duration);
-	transition-property: color, background-color;
+    color: var(--button-hover-color);
+    text-decoration: var(--button-hover-text-decoration);
+    background: var(--button-hover-background);
+    transition-duration: var(--transition-duration);
+    transition-property: color, background-color;
 }
 
 .navbar-menu {
@@ -156,7 +156,7 @@ a:active {
     background-color: var(--color-white);
     width: 0;
     height: 0.2rem;
-	transition: var(--transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .nav .nav-item:hover .nav-link::before {
@@ -235,12 +235,12 @@ a:active {
 }
 
 .card-work .card-inner {
-	position: absolute;
-	top: -0.1rem;
-	left: -0.1rem;
-	right: -0.1rem;
-	z-index: 1;
-	transition: var(--transition-duration) var(--transition-cubic-bezier);
+    position: absolute;
+    top: -0.1rem;
+    left: -0.1rem;
+    right: -0.1rem;
+    z-index: 1;
+    transition: var(--transition-duration) var(--transition-cubic-bezier)
 }
 
 .card-work:hover .card-inner {
@@ -275,12 +275,12 @@ a:active {
 }
 
 .card-work:hover .card-image {
-	transform: scale(1.2);
-	transition: var(--transition-duration) var(--transition-cubic-bezier);
+    transform: scale(1.2);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-outer {
-	transform: scale(0.95);
+    transform: scale(0.95);
 }
 
 .section {
