--- a/sass_scss/9-extend_list.scss
+++ b/sass_scss/9-extend_list.scss
@@ -1,10 +1,10 @@
 /* Extended class */
-%font-shared {
+.info {
 	font-size: 12px;
 }
 
 .info, .success, .warning {
-	@extend %font-shared;
+	@extend .info;
 }
 
 .success {
