--- a/sass_scss/11-loop_photos.scss
+++ b/sass_scss/11-loop_photos.scss
@@ -3,6 +3,6 @@
 
 @each $name in $list-names {
 	.photo-#{$name} {
-		background-image: image-url('photos/#{$name}.jpg)') no-repeat;
+		background-image: image-url('photos/#{$name}.jpg') no-repeat;
 	}
 }
