--- a/sass_scss/11-loop_photos.scss
+++ b/sass_scss/11-loop_photos.scss
@@ -1,8 +1,8 @@
 /* For each loop ! */
 @import './11-photos.scss';
-
 @each $name in $list-names {
 	.photo-#{$name} {
-		background-image: image-url('photos/#{$name}.jpg') no-repeat;
+		background: image-url("photos/#{$name}.jpg") no-repeat;
+
 	}
 }
