--- a/flexbox/0-styles.css
+++ b/flexbox/0-styles.css
@@ -366,8 +366,11 @@ a:active {
 /* Grid
       ============================= */
 
-ul.row {
+.row {
 	display: flex;
+}
+
+ul.row {
 	margin: 0;
 	padding: 0;
 	list-style: none;
