--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -559,7 +559,7 @@ ul.row {
 
 /* Section Latest news ============================= */
 
-section.section-latest-news .section-body .row {
+.section-latest-news .section-body .row {
 	flex-direction: row-reverse;
 }
 
