--- a/flexbox/6-styles.css
+++ b/flexbox/6-styles.css
@@ -394,12 +394,15 @@ ul.row {
 	display: flex;
 }
 
+.nav .nav-item + .nav-item {
+	margin: var(--nav-item-margin);
+}
+
 .nav .nav-item {
 	font-family: var(--nav-item-font-family);
 	font-weight: var(--nav-item-font-weight);
 	font-size: var(--nav-item-font-size);
 	letter-spacing: var(--nav-item-letter-spacing);
-	margin: var(--nav-item-margin);
 }
 
 .nav .nav-link {
