--- a/flexbox/9-styles.css
+++ b/flexbox/9-styles.css
@@ -564,7 +564,7 @@ ul.row {
 
 /* Section ABOUT US =================== */
 
-.section-about-us .col- {
+[class*='col-'] .section-about-us {
 	align-self: center;
 }
 
