--- a/flexbox/11-styles.css
+++ b/flexbox/11-styles.css
@@ -730,13 +730,13 @@ ul.row {
 	z-index: 0;
 }
 
-.section-inner {
+.hero-article .section-inner {
 	text-align: center;
 	align-items: center;
 	min-height: 40vh;
 }
 
-.section-body {
+.hero-article .section-body {
 	position: relative;
 	padding: 7rem 0 0;
 	z-index: 2;
