--- a/flexbox/12-styles.css
+++ b/flexbox/12-styles.css
@@ -749,15 +749,15 @@ ul.row {
 /* Post
     ============================= */
 
-.main-article .post {
+.post {
 	display: flex;
 }
 
-.main-article .post-content {
+.post-content {
 	width: 100%;
 }
 
-.main-article .post-aside  {
+.post-aside  {
 	order: -1;
 	min-width: 20%;
 }
