--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -776,7 +776,7 @@ ul.row {
 	display: block;
 }
 
-.post-meta-list [class*=post-meta-] {
+.post-meta-list .[class*=post-meta-] {
 	margin-bottom: 1rem;
 	padding-bottom: 1rem;
 	border-bottom: 0.2rme solid var(--color-light-grey);
