--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -799,10 +799,10 @@ ul.row {
 	display: inline;
 }
 
-.tag-list .li::after {
+.tag-list li::after {
 	content: ", ";
 }
 
-.tag-list > .li::after {
+.tag-list > li::after {
 	content: "";
 }
