--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -776,7 +776,7 @@ ul.row {
 	display: block;
 }
 
-.post-meta-list [class*='post-meta'] {
+.post-meta-list [class*='post-meta-'] {
 	margin-bottom: 1rem;
 	padding-bottom: 1rem;
 	border-bottom: 0.2rem solid var(--color-light-grey);
@@ -795,7 +795,7 @@ ul.row {
 	list-style: none;
 }
 
-.tag-list [class*=li] {
+.tag-list [class*='li'] {
 	display: inline;
 }
 
