--- a/form/03-styles.css
+++ b/form/03-styles.css
@@ -868,7 +868,7 @@ fieldset {
 label {
 	cursor: pointer;
 	display: block;
-	flex-wrap: nowrap;
+	white-space: nowrap;
 	font-size: 1.4rem;
 	padding: 0 0 .5rem;
 }
