--- a/responsive_design/04-styles.css
+++ b/responsive_design/04-styles.css
@@ -478,6 +478,19 @@ ul.row {
 	.navbar-menu {
 		display: none;
 	}
+	:root {
+		--nav-item-margin: 0;
+	}
+	.navbar-menu {
+		flex: 1;
+	}
+
+	.header .nav {
+		flex-direction: column;
+		overflow: hidden;
+		max-height: 0;
+		transition: max-height .2s ease-out;
+	}
 }
 
 /* Header
