--- a/responsive_design/03-styles.css
+++ b/responsive_design/03-styles.css
@@ -410,7 +410,7 @@ ul.row {
 		--section-body-padding: 2rem 0 0;
 	}
 
-	.ul.row, .row {
+	ul.row, .row {
 		flex-direction: column;
 		margin: 0;
 	}
